fix: change gallery previews on mobile

--- a/src/styles/gallery.scss
+++ b/src/styles/gallery.scss
@@ -61,7 +61,9 @@
 
     background-color: rgba(61, 60, 63, 0.8);
 
-    transition: 0.3s;@import "./slider.scss";
+    transition: 0.3s;
+
+@import "./slider.scss";
   }
   &__text {
     padding-top: 20rem;
@@ -208,7 +210,7 @@
   }
 }
 
-@media(max-width: 355px) {
+@include mobile() {
   .gallery {
     &__inner {
       flex-direction: column;
